# blob-dl

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASES.md  dist-workspace.toml
.github/workflows/: release.yml
blobdltest/: 2_Montale dice ＂Pascoli＂ e si trasforma in Mussolini.webm
blobdltest [broken]/: 02_Montale dice ＂Pascoli＂ e si trasforma in Mussolini.webm
src/: analyzer.rs  app.rs  assembling.rs  config.rs  dispatcher.rs  error.rs  lib.rs  main.rs  parser.rs  parsing.rs  preferences.rs  run.rs  tutorial.rs
src/assembling/: mod.rs  youtube.rs
src/assembling/sp_album/: config.rs  wizard.rs
src/assembling/sp_playlist/: config.rs  wizard.rs
src/assembling/sp_track/: config.rs  mod.rs  wizard.rs
src/assembling/youtube/: config.rs  yt_playlist.rs  yt_video.rs
src/assembling/youtube/yt_playlist/: config.rs  mod.rs  wizard.rs
src/assembling/youtube/yt_video/: config.rs  mod.rs  wizard.rs
src/assembling/yt_playlist/: config.rs  wizard.rs
src/assembling/yt_video/: config.rs  mod.rs  wizard.rs
src/parsing/: mod.rs  parsing.rs
src/wizard/: mod.rs
src/wizard/yt_playlist_wizard/: mod.rs
