[package]
author = "Michele Cioccarelli <cioccarellimi@gmail.com>"
name = "blob-dl"
version = "1.0.0"
license = "MIT"
description = "A cli tool to make downloading youtube content easy, based on yt-dlp"
categories = ["command-line-utilities"]
keywords = ["youtube", "ytoutube-dl", "yt-dlp", "video", "playlist"]
repository = "https://github.com/MicheleCioccarelli/blob-dl"
edition = "2021"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.2"
execute = "0.2.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
spinoff = "0.6.0"
url = "2.3.1"
which = "4.4.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.1.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
