[package]
name = "blob-dl"
version = "1.1.3"
license = "MIT"
description = "A cli tool to make downloading youtube content easy, based on yt-dlp"
categories = ["command-line-utilities"]
keywords = ["youtube", "youtube-dl", "yt-dlp", "video", "playlist"]
repository = "https://github.com/MicheleCioccarelli/blob-dl"
edition = "2021"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.2"
directories = "6.0.0"
execute = "0.2.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
spinoff = "0.8.0"
url = "2.3.1"
which = "4.4.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
